--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ body {
 .Acts {
 	grid-area: Acts;
 }
-button {
+.el {
 	width: 40px;
 	height: 40px;
 	margin: 5px;
@@ -106,6 +106,13 @@ button {
 	border: 2px soild #BBB;
 	cursor: pointer;
 	position: relative;
+	text-align: center;
+}
+.el2 {
+	text-align: center;
+	border: none;
+	background: transparent;
+	cursor: auto;
 }
 .noble-gas {
 	background-image: linear-gradient(45deg, #33ff66, #f2ff99);
@@ -126,7 +133,7 @@ button {
 	background-image: linear-gradient(45deg, #996666, #ffcccc);
 }
 .alkali-metal {
-	background-image: linear-gradient(45deg, #cc0001, #ff6666);
+	background-image: linear-gradient(45deg, #ff6666, #ff9933);
 }
 .actinides {
 	background-image: linear-gradient(45deg, #33cc99, #99ffcc);
@@ -154,15 +161,15 @@ button {
 	background-image: linear-gradient(45deg, #666699, #ff9999);
 }
 .alkali-metal::before {
-	background-image: linear-gradient(45deg, #cc0001, #666699);
+	background-image: linear-gradient(45deg, #FFB3B3, #666699);
 }
 .actinides::before {
 	background-image: linear-gradient(45deg, #33cccc, #33cccc);
 }
 .lanthanides::before {
-	background-image: linear-gradient(45deg, #33cc99, #ff6666);
+	background-image: linear-gradient(45deg, #33cc99, #ff9933);
 }
-button::before {
+.el::before {
 	content: "";
 	position: absolute;
 	top: -5px;
@@ -174,7 +181,7 @@ button::before {
 	opacity: 0;
 	transition: 0.5s;
 }
-button:hover:before {
+.el:hover:before {
   filter: blur(15px);
   opacity: 1;
   animation: animate 3s linear infinite;
@@ -201,8 +208,8 @@ button:hover:before {
 	display: block;
 }
 .overlay {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	top: 0;
@@ -210,8 +217,8 @@ button:hover:before {
 }
 .table {
 	z-index: 10;
-	width: 50vw;
-	height: 90vh;
+	width: 50%;
+	height: 90%;
 	overflow: hidden;
 	position: absolute;
 	top: 50%;
@@ -258,8 +265,6 @@ button:hover:before {
 	padding: 5px 0;
 }
 .table .tbody .el-intro .el-type {
-	font-size: 14px;
-	word-spacing: 25px;
 	padding: 5px 0;
 }
 .table .tbody .el-props {
@@ -287,9 +292,68 @@ button:hover:before {
 }
 @media (max-width: 800px) {
 	.table {
-		width: 80vw;
+		width: 80%;
 	}
-	.table .el-intro {
-		height: 20vh;
+	.table .tbody .el-intro {
+		height: 20%;
 	}
+}
+.mpt-dl {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.mpt-dl p {
+	text-align: center;
+}
+.img {
+	width: 90%;
+	padding: 0 5% 0 5%;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
+.img img {
+	max-width: 60%;
+	border: 2px dotted #CCC;
+}
+.img a {
+	background: rgba(0, 0, 0, 0.5);
+	padding: 0.5%;
+	border-radius: 5px;
+	color: #CDCDCD;
+	text-decoration: none;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+.dl-button1 {
+	left: 45%;
+}
+.dl-button2 {
+	left: 55%;
+}
+.article {
+	text-align: right;
+	width: 70%;
+	margin: 10% auto;
+	direction: rtl;
+}
+.article .article-p {
+	line-height: 1.6;
+}
+footer {
+	width: 70%;
+	margin: 10% auto;
+}
+footer p {
+	color: rgb(40, 40, 40);
+	letter-spacing: 1px;
+}
+footer a {
+	color: #000;
+	font-weight: bold;
+	text-decoration: none;
 }
