--- a/main.css
+++ b/main.css
@@ -6,6 +6,9 @@ body {
 	background-size: 400% 400%;
 
 }
+.no-scroll {
+	overflow: hidden;
+}
 .grid-wrapper {
 	display: grid;
 	grid-template-areas:
@@ -214,9 +217,10 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 10;
 }
 .table {
-	z-index: 10;
+	z-index: 11;
 	width: 50%;
 	height: 90%;
 	overflow: hidden;
